[tool.poetry]
name = "repl_python3_MiniLightyellowFlashmemory"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
names = "^0.3.0"
Flask = "^2.1.2"
JSON_minify = "^0.3.0"
requests-toolbelt = "^0.9.1"
pymongo = "^4.1.1"
tornado = "^6.1"
heroku3 = "^5.1.4"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
